feat: 实现管理员创建交互类通知接口
